--- a/index.html
+++ b/index.html
@@ -50,63 +50,9 @@
     <!-- Announcements -->
     <div class="announcements-header">Announcements</div>
     <div id="announcements" class="announcements-grid">
-        <div class="announcement-card" data-title="Weekly Sports Night - Come out and play!" data-details="Details for Announcement 1.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement1.png');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Every Friday</div>
-                <div class="announcement-title">Sports Night</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 2.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement2.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 2</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 3.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement3.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 3</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 4.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement4.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 4</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 5.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement5.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 5</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 6.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement6.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 6</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 7.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement7.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 7</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
-        <div class="announcement-card" data-title="Placeholder" data-details="Details for Announcement 8.">
-            <div class="announcement-bg" style="background-image: url('assets/announcements/announcement8.jpg');"></div>
-            <div class="announcement-content">
-                <div class="announcement-subtitle">Announcement 8</div>
-                <div class="announcement-title">Placeholder</div>
-            </div>
-        </div>
+        <!-- Announcement cards will be injected here by JavaScript -->
     </div>
+
     
     <div id="popup" class="popup-overlay" style="display:none;">
         <div class="popup-content">
