--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div id="icons">
                 <button onclick="signIn()" title="Sign In">
-                    <img src="assets/icons/user.png" alt="Sign In">
+                    <div id="signin">Sign In</div>
                 </button>
             </div>
         </div>
