--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,10 +16,8 @@
                 <img src="../assets/logo/logobanner.png" alt="Logo" onclick="window.location.href='../index.html'">
             </div>
             <div id="icons">
-                
-
                 <button onclick="signIn()" title="Sign In">
-                    <img src="../assets/icons/user.png" alt="Sign In">
+                    <div id="signin">Sign In</div>
                 </button>
             </div>
         </div>
